--- a/portfolio.html
+++ b/portfolio.html
@@ -82,6 +82,15 @@
                                 <p class="small-para blue-text">frontend</p>
                             </div>
                     </div>
+                    <div class="my-col">
+                        <div class="my-card port-card">
+                            <h3 class="greet-heading blue-text">
+                                tip calculator
+                            </h3>
+                            <a href="C:\Users\arazi\justit\week2\Day4\tip.html">link</a>
+                            <p class="small-para blue-text">frontend</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -139,7 +148,6 @@
                 <h1 class="my-heading text-center">Contact Me</h1>
             </div>
                 <div class="contact-details">
-                    <h1 class="greet-heading">My Contact Details</h1>
                     <div class="details">
                         <h5 class="contact-heading">EMAIL</h5>
                         <p class="contact-text">arazik500@gmail.com</p>
@@ -176,8 +184,6 @@
     </body>
     
 </html>
-
-
 
 
 
