--- a/portfolio.html
+++ b/portfolio.html
@@ -91,6 +91,15 @@
                             <p class="small-para blue-text">frontend</p>
                         </div>
                     </div>
+                    <div class="my-col">
+                        <div class="my-card port-card">
+                            <h3 class="greet-heading blue-text">
+                                personal finance tracker 
+                            </h3>
+                            <a href="C:\Users\arazi\justit\project\PersonalFianaceTracker\Program.cs">link</a>
+                            <p class="small-para blue-text">c#</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -184,6 +193,7 @@
     </body>
     
 </html>
+
 
 
 
